test: close enquiry management phase
